@@ -5,6 +5,9 @@ Changes in @NEW@:
       files; there are lists for both binary and text types, and files which are
       added which aren't in either list need to be added with "--text" or
       "--binary"
+    * "cvc annotate" no longer displays pathIds in the error message for the
+      specified path not being included in the source trove
+    * "cvc annotate" now gives an error when it is run on a binary file
 
 Changes in 1.0.30:
   o System Update Changes:
